src/test/ui/nll/ty-outlives/ty-param-fn.stderr
warning: not reporting region error due to nll
  --> $DIR/ty-param-fn.rs:21:5
   |
LL |     x
   |     ^

warning: not reporting region error due to nll
  --> $DIR/ty-param-fn.rs:37:5
   |
LL |     x
   |     ^

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/ty-param-fn.rs:21:5
   |
LL | fn no_region<'a, T>(x: Box<T>) -> Box<Debug + 'a>
   |                  - help: consider adding an explicit lifetime bound `T: 'a`...
...
LL |     x
   |     ^

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/ty-param-fn.rs:37:5
   |
LL | fn wrong_region<'a, 'b, T>(x: Box<T>) -> Box<Debug + 'a>
   |                         - help: consider adding an explicit lifetime bound `T: 'a`...
...
LL |     x
   |     ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0309`.
